@@ -18,7 +18,8 @@ namespace CIAO
   namespace DDS4CCM
   {
     CCM_DDS_SubscriberListener_i::CCM_DDS_SubscriberListener_i (::DDS::SubscriberListener_ptr p)
-      : impl_ ( ::DDS::SubscriberListener::_duplicate (p))
+      : impl_ ( ::DDS::SubscriberListener::_duplicate (p)),
+        dds_reader_ (::DDS::DataReader::_nil ())
     {
       DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_i::CCM_DDS_SubscriberListener_i");
     }
@@ -41,6 +42,18 @@ namespace CIAO
       the_subscriber->notify_datareaders ();
     }
 
+    ::DDS::DataReader_ptr
+    CCM_DDS_SubscriberListener_i::get_datareader_proxy (
+      ::DDSDataReader * the_reader)
+    {
+      if (::CORBA::is_nil (this->dds_reader_.in ()))
+        {
+          ACE_NEW_NORETURN (this->dds_reader_,
+                            CCM_DDS_DataReader_i (the_reader));
+        }
+      return this->dds_reader_.in ();
+    }
+
     void
     CCM_DDS_SubscriberListener_i::on_requested_deadline_missed (
       ::DDSDataReader* the_reader,
@@ -48,15 +61,16 @@ namespace CIAO
     {
       DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_i::on_requested_deadline_missed");
 
-      ::DDS::DataReader_var dds_reader = ::DDS::DataReader::_nil ();
-      ACE_NEW (dds_reader,
-               CCM_DDS_DataReader_i (the_reader));
 #if (CIAO_DDS4CCM_NDDS==1)
       ::DDS::RequestedDeadlineMissedStatus ddsstatus;
       ddsstatus <<= status;
-      this->impl_->on_requested_deadline_missed (dds_reader.in (), ddsstatus);
+      this->impl_->on_requested_deadline_missed (
+        this->get_datareader_proxy (the_reader),
+        ddsstatus);
 #else
-      this->impl_->on_requested_deadline_missed (dds_reader.in (), status);
+      this->impl_->on_requested_deadline_missed (
+        this->get_datareader_proxy (the_reader),
+        status);
 #endif
     }
 
@@ -67,15 +81,16 @@ namespace CIAO
     {
       DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_i::on_requested_incompatible_qos");
 
-      ::DDS::DataReader_var dds_reader = ::DDS::DataReader::_nil ();
-      ACE_NEW (dds_reader,
-               CCM_DDS_DataReader_i (the_reader));
 #if (CIAO_DDS4CCM_NDDS==1)
       ::DDS::RequestedIncompatibleQosStatus ddsstatus;
       ddsstatus <<= status;
-      this->impl_->on_requested_incompatible_qos (dds_reader.in (), ddsstatus);
+      this->impl_->on_requested_incompatible_qos (
+        this->get_datareader_proxy (the_reader),
+        ddsstatus);
 #else
-      this->impl_->on_requested_incompatible_qos (dds_reader.in (), status);
+      this->impl_->on_requested_incompatible_qos (
+        this->get_datareader_proxy (the_reader),
+        status);
 #endif
     }
 
@@ -86,15 +101,16 @@ namespace CIAO
     {
       DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_i::on_sample_rejected");
 
-      ::DDS::DataReader_var dds_reader = ::DDS::DataReader::_nil ();
-      ACE_NEW (dds_reader,
-               CCM_DDS_DataReader_i (the_reader));
 #if (CIAO_DDS4CCM_NDDS==1)
       ::DDS::SampleRejectedStatus ddsstatus;
       ddsstatus <<= status;
-      this->impl_->on_sample_rejected (dds_reader.in (), ddsstatus);
+      this->impl_->on_sample_rejected (
+        this->get_datareader_proxy (the_reader),
+        ddsstatus);
 #else
-      this->impl_->on_sample_rejected (dds_reader.in (), status);
+      this->impl_->on_sample_rejected (
+        this->get_datareader_proxy (the_reader),
+        status);
 #endif
     }
 
@@ -105,15 +121,16 @@ namespace CIAO
     {
       DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_i::on_liveliness_changed");
 
-      ::DDS::DataReader_var dds_reader = ::DDS::DataReader::_nil ();
-      ACE_NEW (dds_reader,
-               CCM_DDS_DataReader_i (the_reader));
 #if (CIAO_DDS4CCM_NDDS==1)
       ::DDS::LivelinessChangedStatus ddsstatus;
       ddsstatus <<= status;
-      this->impl_->on_liveliness_changed (dds_reader.in (), ddsstatus);
+      this->impl_->on_liveliness_changed (
+        this->get_datareader_proxy (the_reader),
+        ddsstatus);
 #else
-      this->impl_->on_liveliness_changed (dds_reader.in (), status);
+      this->impl_->on_liveliness_changed (
+        this->get_datareader_proxy (the_reader),
+        status);
 #endif
     }
 
@@ -123,10 +140,8 @@ namespace CIAO
     {
       DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_i::on_data_available");
 
-      ::DDS::DataReader_var dds_reader = ::DDS::DataReader::_nil ();
-      ACE_NEW (dds_reader,
-               CCM_DDS_DataReader_i (the_reader));
-      this->impl_->on_data_available (dds_reader.in ());
+      this->impl_->on_data_available (
+        this->get_datareader_proxy (the_reader));
     }
 
     void
@@ -136,15 +151,16 @@ namespace CIAO
     {
       DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_i::on_subscription_matched");
 
-      ::DDS::DataReader_var dds_reader = ::DDS::DataReader::_nil ();
-      ACE_NEW (dds_reader,
-               CCM_DDS_DataReader_i (the_reader));
 #if (CIAO_DDS4CCM_NDDS==1)
       ::DDS::SubscriptionMatchedStatus ddsstatus;
       ddsstatus <<= status;
-      this->impl_->on_subscription_matched (dds_reader.in (), ddsstatus);
+      this->impl_->on_subscription_matched (
+        this->get_datareader_proxy (the_reader),
+        ddsstatus);
 #else
-      this->impl_->on_subscription_matched (dds_reader.in (), status);
+      this->impl_->on_subscription_matched (
+        this->get_datareader_proxy (the_reader),
+        status);
 #endif
     }
 
@@ -155,15 +171,16 @@ namespace CIAO
     {
       DDS4CCM_TRACE ("CCM_DDS_SubscriberListener_i::on_sample_lost");
 
-      ::DDS::DataReader_var dds_reader = ::DDS::DataReader::_nil ();
-      ACE_NEW (dds_reader,
-               CCM_DDS_DataReader_i (the_reader));
 #if (CIAO_DDS4CCM_NDDS==1)
       ::DDS::SampleLostStatus ddsstatus;
       ddsstatus <<= status;
-      this->impl_->on_sample_lost (dds_reader.in (), ddsstatus);
+      this->impl_->on_sample_lost (
+        this->get_datareader_proxy (the_reader),
+        ddsstatus);
 #else
-      this->impl_->on_sample_lost (dds_reader.in (), status);
+      this->impl_->on_sample_lost (
+        this->get_datareader_proxy (the_reader),
+        status);
 #endif
     }
 
